--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ly-tab": "^2.1.2",
     "mint-ui": "^2.2.13",
     "postcss-px2rem-exclude": "^0.0.6",
+    "urlencode": "^1.1.0",
     "vant": "^2.5.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
