--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.19.2",
     "echarts": "^4.2.0-rc.2",
     "ly-tab": "^2.1.2",
     "mint-ui": "^2.2.13",
     "postcss-px2rem-exclude": "^0.0.6",
+    "qs.js": "^0.1.12",
     "urlencode": "^1.1.0",
     "vant": "^2.5.5",
     "vue": "^2.5.2",
