--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.2",
     "echarts": "^4.2.0-rc.2",
+    "fastclick": "^1.0.6",
     "ly-tab": "^2.1.2",
     "mint-ui": "^2.2.13",
     "postcss-px2rem-exclude": "^0.0.6",
