--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "axios": "^0.19.2",
     "echarts": "^4.2.0-rc.2",
     "fastclick": "^1.0.6",
+    "fundebug-javascript": "^2.2.0",
+    "fundebug-revideo": "^0.6.2",
+    "fundebug-vue": "0.0.1",
     "ly-tab": "^2.1.2",
     "mint-ui": "^2.2.13",
     "postcss-px2rem-exclude": "^0.0.6",
