--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "qs.js": "^0.1.12",
     "urlencode": "^1.1.0",
     "vant": "^2.5.5",
+    "vconsole": "^3.3.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
